--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "dependencies": {
     "sirv-cli": "^2.0.0",
-    "svelte-keyboard": "^0.4.0"
+    "svelte-keyboard": "^0.4.0",
+    "svelte-simple-modal": "^1.3.1"
   }
 }
